# tesserae

./: .gitignore  LICENSE  dune-project
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: algebra.mli  cluster.ml  cluster.mli  codegen.mli  compose.ml  compose.mli  layout.ml  mma_atom.ml  predicate.ml  predicate.mli  swizzle.ml  tensor.ml  tesserae.cmxa  tesserae.ml-gen  tmem.mli
_build/default/lib/.merlin-conf/: lib-tesserae
_build/default/lib/.tesserae.objs/: tesserae__Algebra.impl.all-deps  tesserae__Algebra.impl.d  tesserae__Algebra.intf.all-deps  tesserae__Algebra.intf.d  tesserae__Cluster.impl.d  tesserae__Cluster.intf.d  tesserae__Codegen.impl.d  tesserae__Codegen.intf.all-deps  tesserae__Codegen.intf.d  tesserae__Compose.impl.d  tesserae__Compose.intf.d  tesserae__Copy_atom.impl.all-deps  tesserae__Copy_atom.impl.d  tesserae__Copy_atom.intf.d  tesserae__Elemtype.impl.d  tesserae__Elemtype.intf.d  tesserae__Layout.impl.all-deps  tesserae__Layout.impl.d  tesserae__Layout.intf.d  tesserae__Memspace.impl.d  tesserae__Memspace.intf.d  tesserae__Mma_atom.impl.all-deps  tesserae__Mma_atom.impl.d  tesserae__Mma_atom.intf.d  tesserae__Modes.impl.d  tesserae__Modes.intf.d  tesserae__Predicate.impl.all-deps  tesserae__Predicate.impl.d  tesserae__Predicate.intf.d  tesserae__Swizzle.impl.d  tesserae__Swizzle.intf.all-deps  tesserae__Swizzle.intf.d  tesserae__Tensor.impl.all-deps  tesserae__Tensor.impl.d  tesserae__Tensor.intf.all-deps  tesserae__Tensor.intf.d  tesserae__Tiled_copy.impl.all-deps  tesserae__Tiled_copy.impl.d  tesserae__Tiled_copy.intf.all-deps  tesserae__Tiled_copy.intf.d  (+6 more)
_build/default/test/: test_algebra.ml  test_layout.ml  test_mode.ml  test_tensor.ml  test_tiled_mma.ml
_build/default/test/.merlin-conf/: exe-test_algebra  exe-test_cluster  exe-test_codegen  exe-test_compose  exe-test_copy_atom  exe-test_divide  exe-test_elemtype  exe-test_layout  exe-test_memspace  exe-test_mma_atom  exe-test_mode  exe-test_predicate  exe-test_swizzle  exe-test_tensor  exe-test_tiled_copy  exe-test_tiled_mma  exe-test_tmem
_build/default/test/.test_algebra.eobjs/: dune__exe__Test_algebra.impl.d  dune__exe__Test_algebra.intf.d
_build/default/test/.test_cluster.eobjs/: dune__exe.ml-gen  dune__exe__Test_cluster.impl.d  dune__exe__Test_cluster.intf.d
_build/default/test/.test_codegen.eobjs/: dune__exe.ml-gen  dune__exe__Test_codegen.impl.d  dune__exe__Test_codegen.intf.d
_build/default/test/.test_compose.eobjs/: dune__exe__Test_compose.impl.d  dune__exe__Test_compose.intf.d
_build/default/test/.test_copy_atom.eobjs/: dune__exe__Test_copy_atom.impl.d  dune__exe__Test_copy_atom.intf.d
_build/default/test/.test_divide.eobjs/: dune__exe__Test_divide.impl.d  dune__exe__Test_divide.intf.d
_build/default/test/.test_elemtype.eobjs/: dune__exe__Test_elemtype.impl.d  dune__exe__Test_elemtype.intf.d
_build/default/test/.test_layout.eobjs/: dune__exe__Test_layout.impl.d  dune__exe__Test_layout.intf.d
_build/default/test/.test_memspace.eobjs/: dune__exe__Test_memspace.impl.d  dune__exe__Test_memspace.intf.d
_build/default/test/.test_mma_atom.eobjs/: dune__exe__Test_mma_atom.impl.d  dune__exe__Test_mma_atom.intf.d
_build/default/test/.test_mode.eobjs/: dune__exe__Test_mode.impl.d  dune__exe__Test_mode.intf.d
_build/default/test/.test_predicate.eobjs/: dune__exe__Test_predicate.impl.d  dune__exe__Test_predicate.intf.d
_build/default/test/.test_swizzle.eobjs/: dune__exe__Test_swizzle.impl.d  dune__exe__Test_swizzle.intf.d
lib/: backend_cute.ml  backend_cute.mli  codegen.ml  compile.ml  compile.mli  compose.ml  copy_atom.ml  copy_atom.mli  dune  elemtype.ml  gpu_buffer.ml  kernel_desc.ml  kernel_desc.mli  layout.ml  layout.mli  lower.ml  lower.mli  memspace.ml  mma_atom.ml  mma_atom.mli  modes.mli  nvrtc.ml  nvrtc.mli  nvrtc_stub.c  nvrtc_stub.h  smem_desc.ml  smem_desc.mli  tensor.mli  tile_io.ml  tile_io.mli  tile_op.ml  tile_op.mli  tiled_copy.ml  tiled_copy.mli  tiled_mma.ml  tiled_mma.mli  tmem.ml  tmem.mli
lib/atoms/: copy_atom.ml  copy_atom.mli  dune  mma_atom.ml  mma_atom.mli  tiled_copy.ml  tiled_copy.mli  tiled_mma.ml  tiled_mma.mli
lib/atoms/tests/: dune  test_tiled_copy.ml
lib/backend/: backend_cute.ml  backend_cute.mli  dune
lib/backend/tests/: dune
lib/core/: algebra.ml  dune  elemtype.ml  elemtype.mli  memspace.mli  modes.ml  swizzle.mli
lib/core/tests/: dune  test_codegen.ml  test_divide.ml  test_elemtype.ml  test_layout.ml  test_memspace.ml  test_mode.ml
lib/kernel/: dune  kernel_ast.ml  kernel_ast.mli  kernel_desc.ml  kernel_desc.mli  kernel_launch.ml  kernel_launch.mli  kernel_launch_stubs.c  lower.ml  lower.mli
lib/kernel/tests/: dune
lib/pipeline/: cluster.ml  dune  pipeline.ml  pipeline.mli  predicate.ml  predicate.mli  smem_desc.ml  smem_desc.mli  tile_io.ml  tile_io.mli  tile_op.ml  tile_op.mli  tmem.ml  tmem.mli
lib/pipeline/tests/: dune
lib/runtime/: compile.ml  compile.mli  dune  gpu_buffer.mli  gpu_buffer_stubs.c  nvrtc.ml  nvrtc.mli  runtime.ml  runtime.mli
lib/runtime/tests/: dune  test_compile.ml  test_gpu_buffer.ml  test_nvrtc_stub.c  test_runtime.ml
lib/tir/: desc_to_tir.ml  dune  tir.ml  tir.mli  tir_pp.ml  tir_pp.mli
lib/tirix/: desc_to_tirix.ml  dune  tirix.ml  tirix.mli  tirix_emit.ml  tirix_pp.ml  tirix_pp.mli  tirix_verify.ml
lib/tirix/tests/: dune  test_tirix_emit.ml  test_tirix_verify.ml
test/: dune  test_algebra.ml  test_backend_cute.ml  test_cluster.ml  test_codegen.ml  test_compile.ml  test_compose.ml  test_copy_atom.ml  test_divide.ml  test_kernel_ast.ml  test_kernel_desc.ml  test_kernel_launch.ml  test_lower.ml  test_mma_atom.ml  test_nvrtc.ml  test_pipeline.ml  test_predicate.ml  test_smem_desc.ml  test_swizzle.ml  test_tile_io.ml  test_tile_op.ml  test_tiled_copy.ml  test_tiled_mma.ml  test_tmem.ml
(+389 files in other folders)
