(test
 (name test_mode)
 (libraries tesserae alcotest))

(test
 (name test_layout)
 (libraries tesserae alcotest))

 (test
  (name test_compose)
  (libraries tesserae alcotest))


(test
  (name test_memspace)
  (libraries tesserae alcotest))


(test
  (name test_tensor)
  (libraries tesserae alcotest))

(test
  (name test_algebra)
  (libraries tesserae alcotest))

(test
  (name test_elemtype)
  (libraries tesserae alcotest))


(test
  (name test_divide)
  (libraries tesserae alcotest))

(test
  (name test_codegen)
  (libraries tesserae alcotest))

(test
  (name test_swizzle)
  (libraries tesserae alcotest))

(test
  (name test_mma_atom)
  (libraries tesserae alcotest))

(test
  (name test_copy_atom)
  (libraries tesserae alcotest))

(test
  (name test_tiled_mma)
  (libraries tesserae alcotest))

(test
  (name test_tiled_copy)
  (libraries tesserae alcotest))

(test
  (name test_predicate)
  (libraries tesserae alcotest))

(test
  (name test_tmem)
  (libraries tesserae alcotest))

(test
  (name test_cluster)
  (libraries tesserae alcotest))

(test
  (name test_pipeline)
  (libraries tesserae alcotest))

(test
  (name test_smem_desc)
  (libraries tesserae alcotest))

(test
  (name test_tile_io)
  (libraries tesserae alcotest))

(test
  (name test_tile_op)
  (libraries tesserae alcotest))


(test
  (name test_kernel_desc)
  (libraries tesserae alcotest))


(test
  (name test_kernel_ast)
  (libraries tesserae alcotest))

(test
  (name test_lower)
  (libraries tesserae alcotest))

(test
  (name test_backend_cute)
  (libraries tesserae alcotest))

(test
  (name test_compile)
  (libraries tesserae alcotest))
