
(test
  (name test_compile)
  (libraries tesserae alcotest))

(test
  (name test_nvrtc)
  (libraries tesserae alcotest base))

(test
  (name test_gpu_buffer)
  (libraries tesserae alcotest base))

(test
  (name test_kernel_launch)
  (libraries tesserae alcotest base))

(test
  (name test_runtime)
  (libraries tesserae alcotest base))
